# WebPy_HW8

./: pyproject.toml
Mongo/: __init__.py  main.py  models.py  seeds.py
Mongo/src/: connect.py  models.py  seeds.py
Mongo/src/various/: copy.py  find.py  my_errors
mongo/: __init__.py  config.ini  connect.py  main.py  models.py  seeds.py
rabbitMQ/: consumer.py  models.py  producer.py
